Update to course JavaScript

--- a/Curso de JavaScript/index.html
+++ b/Curso de JavaScript/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Introducción a JavaScript</title>
 		<meta charset="utf-8">
-		<script src="js/funciones.js"></script>
+		<script src="js/ejercicio3.js"></script>
 	</head>
 	<body>
 	</body>
