--- a/Curso de JavaScript/index.html
+++ b/Curso de JavaScript/index.html
@@ -3,8 +3,15 @@
 	<head>
 		<title>Introducción a JavaScript</title>
 		<meta charset="utf-8">
-		<script src="js/ejercicio3.js"></script>
+		<link rel="stylesheet" type="text/css" hrf="css/estilos.css">
 	</head>
 	<body>
+		<div class="flex-container">
+		</div>
+		<form>
+			<input type="submit" name="data" value="Comprar">
+		</form>
+		<script src="js/Siblings.js"></script>
 	</body>
 </html>
+ 
