Avance del curso de JavasCript Segunda Parte

--- a/Curso de JavaScript Segunda Parte/index.html
+++ b/Curso de JavaScript Segunda Parte/index.html
@@ -5,12 +5,21 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div class="external-container">
+        <!--
+         <div class="external-container">
             <div class="internal-container">
                 <button class="button">Click</button>
                 <input class="input" type="text" name="name">
             </div>
         </div>
-        <script rel="script" src="js/event-keyboard/class1.js"></script>
+        -->
+        <!--
+         <img src="https://fondosmil.com/fondo/17040.jpg" class="img-test">
+       
+         <input type="text" class="input">
+         <div class="container">
+         </div>
+          -->
+        <script rel="script" src="js/expections-control/class1.js"></script>
     </body>
 </html>
