Curso de JavaScript Mid-Level finalizado

--- a/Curso de JavaScript Segunda Parte/js/expections-control/ejercicio1/index.html
+++ b/Curso de JavaScript Segunda Parte/js/expections-control/ejercicio1/index.html
@@ -5,6 +5,21 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="modal-container">
+            <div class="modal">
+                <h3 class="nota"></h3>
+                <p class="mensaje"></p>
+            </div>
+        </div>
+        <form class="notes-form">
+            <legend>Introduzca las notas del alumno</legend>
+            <fieldset>
+                <input placeholder="Nota 1" type="number" id="studiant-note-1">
+                <input placeholder="Nota 2" type="number" id="studiant-note-2">
+                <input placeholder="Nota 3" type="number" id="studiant-note-3">
+                <input type="submit" value="Cargar" id="button">
+            </fieldset>
+        </form>
         <script rel="script" src="ejercicio1.js"></script>
     </body>
 </html>
